--- a/pupe/28.html
+++ b/pupe/28.html
@@ -210,54 +210,45 @@ menuuuuuuuuuuuuuuu
 <sub><sub><sub><img width="auto" height="20px" src="https://file.pooftie.me/pupe/pf.png"></sub></sub></sub> ‌ <b>puf</b><br><br>
 </font>
 
-<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf27.png">
+<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf28.png">
 
 <div style="position:absolute; top:5px; left:135px; overflow:hidden; border-style: solid; border-width: 10px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px; padding-top:1px;">
 <font color="#a37c81" style="font-size:8px;">
-<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf27+.png"></sub></sub></sub></sub> ‌ <b>forest girl</b><br></font>
+<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf28+.png"></sub></sub></sub></sub> ‌ <b>summer paradise</b><br></font>
 <div style="border: none; width: 110px; height: 145px; margin-top:4px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:0px;">
 ‌<font color="#b0878d" style="font-size:7px;">
-‌ •‌ Glitter lip gloss/12KJ
-<br>‌ •‌ White Flowers/wh12IJ
-<br>‌ •‌ Mascara/001
-<br>‌ •‌ Flower wagon/wh13DJ
-<br>‌ •‌ Hair glitter/12KJ
-<br>‌ •‌ Country boots/12E
-<br>‌ •‌ Wood planter/yw13DJ
-<br>‌ •‌ Decolletage beaty cream/11KJ
-<br>‌ •‌ Dolly long05/12DJ
-<br>‌ •‌ Glitteringly mat effect/11EJ
-<br>‌ •‌ X'mas lingerie/wh09L
-<br>‌ •‌ Patchwork Lap blanket/12AJ
-<br>‌ •‌ Manicure/pk12KJ
-<br>‌ •‌ Eyebrow pencil001
-<br>‌ •‌ Squirrel lolita one-piece dress/11IJ
-<br>‌ •‌ Mini pedicure/pk11KJ
-<br>‌ •‌ Fringe Socks/wh12K
-<br>‌ •‌ Take my head squirrel/bg13BJ
-<br>‌ •‌ Brilliantlyglitteringly effect/11BJ
-<br>‌ •‌ Shoulder squirrel plushie/bg12BJ
-<br>‌ •‌ Strawberry Cardigan/wh12KJ
-<br>‌ •‌ Sparkling heart cheek/or12KJ
-<br>‌ •‌ Lip gloss/pk211KJ
-<br>‌ •‌ Valentine memorial Wall Paper/13BJ
-<br>‌ •‌ Flower hair band/11E
-<br>‌ •‌ Basic flooring/11IJ
-<br>‌ •‌ Forest's mushroom basket/11IJ
-<br>‌ •‌ Color contact lens 009
-<br>‌ •‌ Musical note effect /11BJ
-<br>‌ •‌ Flower motive straw hat/bg12EJ
-<br>‌ •‌ Nobel mini chair/11IJ
-<br>‌ •‌ Eye glitter/11KJ
-<br>‌ •‌ Lace half pants/wh12CJ<br>
+ •‌ Glitter lip gloss/12KJ
+<br>‌ • Thin Ribbon Headbandwh11H
+<br>‌ • Mascara/001
+<br>‌ • Coconut juice/12H
+<br>‌ • Hair glitter/12KJ
+<br>‌ • Decolletage beaty cream/11KJ
+<br>‌ • Dolly long05/12DJ
+<br>‌ • Shortjohn/11G
+<br>‌ • Body board fin/11G
+<br>‌ • Shinning balloon mat/13BJ
+<br>‌ • Glitteringly mat effect/11EJ
+<br>‌ • Rose garden memorial/12B
+<br>‌ • Manicure/pk12KJ
+<br>‌ • Eyebrow pencil001
+<br>‌ • Sparkling heart cheek/pk12KJ
+<br>‌ • Mini pedicure/pk11KJ
+<br>‌ • Brilliantlyglitteringly effect/11BJ
+<br>‌ • Body board/11G
+<br>‌ • Antique flooring/11IJ
+<br>‌ • Surf board/11G
+<br>‌ • Lip gloss/pk211KJ
+<br>‌ • Flower effect/11BJ
+<br>‌ • Soft heart effect/12BJ
+<br>‌ • Color contact lens 009
+<br>‌ • Eye glitter/11KJ<br>
 </font>
 </div>
 </div>
 
-<font color="#a37c81" style="position:absolute; left:145px; top: 220px; font-size:8px; line-height:12px;">
-<a href="https://file.pooftie.me/pupe/forest%20girl.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
-<a href="/pupe/26"><font color="#b08087">← previous outfit</font></a><br>
-<a href="/pupe/28"><font color="#b08087">next outfit →</font></a>
+<font color="#a37c81" style="position:absolute; left:145px; top: 225px; font-size:8px; line-height:12px;">
+<a href="https://file.pooftie.me/pupe/summer%20paradise.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
+<a href="/pupe/27"><font color="#b08087">← previous outfit</font></a>
 </font>
 
 </body>
