--- a/pupe/1.html
+++ b/pupe/1.html
@@ -243,8 +243,8 @@ menuuuuuuuuuuuuuuu
 </div>
 
 <font color="#a37c81" style="position:absolute; left:145px; top: 225px; font-size:8px; line-height:12px;">
-<a href="https://file.pooftie.me/pupe/delicate%20pastoral.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
-<a href="/pupe/2"><font color="#b08087">next outfit →</font></a>
+<a style="text-decoration: none; border-bottom:1px solid #b08087; padding-bottom: 0px;" href="https://file.pooftie.me/pupe/delicate%20pastoral.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
+<a style="text-decoration: none; border-bottom:1px solid #b08087; padding-bottom: 0px;" href="/pupe/2"><font color="#b08087">next outfit →</font></a>
 </font>
 
 </body>
