--- a/pupe/11.html
+++ b/pupe/11.html
@@ -244,9 +244,9 @@ menuuuuuuuuuuuuuuu
 </div>
 
 <font color="#a37c81" style="position:absolute; left:145px; top: 220px; font-size:8px; line-height:12px;">
-<a href="https://file.pooftie.me/pupe/teddy%20girl.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
-<a href="/pupe/10"><font color="#b08087">← previous outfit</font></a><br>
-<a href="/pupe/12"><font color="#b08087">next outfit →</font></a>
+<a style="text-decoration: none; border-bottom:1px solid #b08087; padding-bottom: 0px;" href="https://file.pooftie.me/pupe/teddy%20girl.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
+<a style="text-decoration: none; border-bottom:1px solid #b08087; padding-bottom: 0px;" href="/pupe/10"><font color="#b08087">← previous outfit</font></a><br>
+<a style="text-decoration: none; border-bottom:1px solid #b08087; padding-bottom: 0px;" href="/pupe/12"><font color="#b08087">next outfit →</font></a>
 </font>
 
 </body>
