--- a/pupe/2.html
+++ b/pupe/2.html
@@ -242,9 +242,9 @@ menuuuuuuuuuuuuuuu
 </div>
 
 <font color="#a37c81" style="position:absolute; left:145px; top: 220px; font-size:8px; line-height:12px;">
-<a href="https://file.pooftie.me/pupe/gentle%20rose.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
-<a href="/pupe/1"><font color="#b08087">← previous outfit</font></a><br>
-<a href="/pupe/3"><font color="#b08087">next outfit →</font></a>
+<a style="text-decoration: none; border-bottom:1px solid #b08087; padding-bottom: 0px;" href="https://file.pooftie.me/pupe/gentle%20rose.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
+<a style="text-decoration: none; border-bottom:1px solid #b08087; padding-bottom: 0px;" href="/pupe/1"><font color="#b08087">← previous outfit</font></a><br>
+<a style="text-decoration: none; border-bottom:1px solid #b08087; padding-bottom: 0px;" href="/pupe/3"><font color="#b08087">next outfit →</font></a>
 </font>
 
 </body>
