--- a/pupe/22.html
+++ b/pupe/22.html
@@ -258,9 +258,9 @@ menuuuuuuuuuuuuuuu
 
 
 <font color="#a37c81" style="position:absolute; left:145px; top: 220px; font-size:8px; line-height:12px;">
-<a href="https://file.pooftie.me/pupe/lacy%20fairy.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
-<a href="/pupe/21"><font color="#b08087">← previous outfit</font></a><br>
-<a href="/pupe/23"><font color="#b08087">next outfit →</font></a>
+<a style="text-decoration: none; border-bottom:1px solid #b08087; padding-bottom: 0px;" href="https://file.pooftie.me/pupe/lacy%20fairy.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
+<a style="text-decoration: none; border-bottom:1px solid #b08087; padding-bottom: 0px;" href="/pupe/21"><font color="#b08087">← previous outfit</font></a><br>
+<a style="text-decoration: none; border-bottom:1px solid #b08087; padding-bottom: 0px;" href="/pupe/23"><font color="#b08087">next outfit →</font></a>
 </font>
 
 </body>
