--- a/pupe/29.html
+++ b/pupe/29.html
@@ -210,46 +210,55 @@ menuuuuuuuuuuuuuuu
 <sub><sub><sub><img width="auto" height="20px" src="https://file.pooftie.me/pupe/pf.png"></sub></sub></sub> ‌ <b>puf</b><br><br>
 </font>
 
-<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf28.png">
+<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf29.png">
 
 <div style="position:absolute; top:5px; left:135px; overflow:hidden; border-style: solid; border-width: 10px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px; padding-top:1px;">
 <font color="#a37c81" style="font-size:8px;">
-<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf28+.png"></sub></sub></sub></sub> ‌ <b>summer paradise</b><br></font>
+<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf29+.png"></sub></sub></sub></sub> ‌ <b>picnic with friends</b><br></font>
 <div style="border: none; width: 110px; height: 145px; margin-top:4px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:0px;">
 ‌<font color="#b0878d" style="font-size:7px;">
  •‌ Glitter lip gloss/12KJ
-<br>‌ • Thin Ribbon Headbandwh11H
 <br>‌ • Mascara/001
-<br>‌ • Coconut juice/12H
+<br>‌ • Wood planter/wh13DJ
+<br>‌ • Picnic Basket-Fruit/12KJ
 <br>‌ • Hair glitter/12KJ
+<br>‌ • Frill cardigan/wh13G
 <br>‌ • Decolletage beaty cream/11KJ
+<br>‌ • Lace flower socks/11H
 <br>‌ • Dolly long05/12DJ
-<br>‌ • Shortjohn/11G
-<br>‌ • Body board fin/11G
-<br>‌ • Shinning balloon mat/13BJ
 <br>‌ • Glitteringly mat effect/11EJ
-<br>‌ • Rose garden memorial/12B
+<br>‌ • Berry apron dress/12DJ
+<br>‌ • Green carpet/12AJ
+<br>‌ • X'mas lingerie/wh09L
+<br>‌ • Hand made room background/12FJ
+<br>‌ • Fluff of dandelion/11E
+<br>‌ • Floor type white clover/wh11CJ
 <br>‌ • Manicure/pk12KJ
 <br>‌ • Eyebrow pencil001
-<br>‌ • Sparkling heart cheek/pk12KJ
+<br>‌ • Bambi&rabbit/11CJ
 <br>‌ • Mini pedicure/pk11KJ
 <br>‌ • Brilliantlyglitteringly effect/11BJ
-<br>‌ • Body board/11G
-<br>‌ • Antique flooring/11IJ
-<br>‌ • Surf board/11G
+<br>‌ • Simple hair ribbon/wh13G
+<br>‌ • Clover mat/11CJ
+<br>‌ • Sparkling heart cheek/or12KJ
+<br>‌ • Cage motif ribbon Hair Accessories/1
 <br>‌ • Lip gloss/pk211KJ
-<br>‌ • Flower effect/11BJ
-<br>‌ • Soft heart effect/12BJ
+<br>‌ • Flower hair band/11E
+<br>‌ • Floor type white clover/pk11CJ
 <br>‌ • Color contact lens 009
-<br>‌ • Eye glitter/11KJ<br>
+<br>‌ • Musical note effect /11BJ
+<br>‌ • Princess effect/12KJ
+<br>‌ • Frill Umbrella
+<br>‌ • Eye glitter/11KJ
+<br>‌ • Lace half pants/wh12CJ
+<br>‌ • Clover/11CJ<br>
 </font>
 </div>
 </div>
 
-<font color="#a37c81" style="position:absolute; left:145px; top: 220px; font-size:8px; line-height:12px;">
-<a style="text-decoration: none; border-bottom:1px solid #b08087; padding-bottom: 0px;" href="https://file.pooftie.me/pupe/summer%20paradise.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
-<a style="text-decoration: none; border-bottom:1px solid #b08087; padding-bottom: 0px;" href="/pupe/27"><font color="#b08087">← previous outfit</font></a><br>
-<a style="text-decoration: none; border-bottom:1px solid #b08087; padding-bottom: 0px;" href="/pupe/29"><font color="#b08087">next outfit →</font></a>
+<font color="#a37c81" style="position:absolute; left:145px; top: 225px; font-size:8px; line-height:12px;">
+<a style="text-decoration: none; border-bottom:1px solid #b08087; padding-bottom: 0px;" href="https://file.pooftie.me/pupe/picnic%20with%20friends.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
+<a style="text-decoration: none; border-bottom:1px solid #b08087; padding-bottom: 0px;" href="/pupe/28"><font color="#b08087">← previous outfit</font></a>
 </font>
 
 </body>
