--- a/index.html
+++ b/index.html
@@ -464,17 +464,17 @@ html{-webkit-text-size-adjust: 145%; text-size-adjust: 145%; line-height: 10px !
 #updateitems{line-height: 10px !important;}
 }}
 
-@media screen and (max-width: 1700px) and (orientation: landscape){
+@media screen and (min-width: 1700px) and (orientation: landscape){
 #everything { position: absolute; zoom: 130%;
 	left:240px;
 	top:80px; }
 #stuff { overflow: auto; overflow: scroll; }
 }
-@media screen and (max-width: 2000px) and (orientation: landscape){
-#everything { position: absolute; zoom: 100%;}
+@media screen and (min-width: 2000px) and (orientation: landscape){
+#everything { position: absolute; zoom: 150%;}
 #stuff { overflow: auto; overflow: scroll; }
 }
-@media screen and (max-width: 3000px) and (orientation: landscape){
+@media screen and (min-width: 3000px) and (orientation: landscape){
 #everything { position: absolute; zoom: 260%;
 	left:240px;
 	top:80px; }
