--- a/index.html
+++ b/index.html
@@ -458,7 +458,10 @@ z-index: 3;
     -ms-transform: rotate(90deg);
     transform: rotate(90deg); }
 #stuff { overflow: auto; overflow: scroll; }
-html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
+html{-webkit-text-size-adjust: 145%; text-size-adjust: 145%; line-height: 10px !important;}
+#indextext1{-webkit-text-size-adjust: 120%; text-size-adjust: 120%; line-height: 12px !important;}
+#indextext2{-webkit-text-size-adjust: 120%; text-size-adjust: 120%; line-height: 12px !important;}
+#updateitems{line-height: 10px !important;}
 }}
 
 @media screen and (min-width: 1700px) and (orientation: landscape){
