--- a/commissions.html
+++ b/commissions.html
@@ -436,7 +436,7 @@ height: 100px;
 overflow-x:hidden;
 z-index: 3;
  }
-@media screen and (max-width: 1000px) and (orientation: portrait){
+@media screen and (min-width: 1px) and (orientation: portrait){
 #everything { position: absolute; zoom: 155%;
 	left:570px;
 	top:80px;
@@ -454,7 +454,7 @@ z-index: 3;
 #stuff { overflow: auto; overflow: scroll; }
 }
 @media screen and (min-width: 2000px) and (orientation: landscape){
-#everything { position: absolute; zoom: 100%;}
+#everything { position: absolute; zoom: 170%;}
 #stuff { overflow: auto; overflow: scroll; }
 }
 @media screen and (min-width: 3000px) and (orientation: landscape){
