--- a/gaming.html
+++ b/gaming.html
@@ -434,7 +434,7 @@ z-index: 3;
  }
 
 @supports not (-webkit-touch-callout: none) {
-@media screen and (max-width: 1000px) and (orientation: portrait){
+@media screen and (min-width: 1px) and (orientation: portrait){
 #everything { position: absolute; zoom: 155%;
 	left:570px;
 	top:80px;
@@ -448,7 +448,7 @@ z-index: 3;
     transform: scale(1.55); margin-left:145px; margin-top: 120px;}
 }}
 @supports (-webkit-touch-callout: none) {
-@media screen and (max-width: 1000px) and (orientation: portrait){
+@media screen and (min-width: 1px) and (orientation: portrait){
 #everything { position: absolute; zoom: 155%;
 	left:570px;
 	top:80px;
@@ -472,7 +472,7 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
     transform: scale(1.3); margin-left:80px; margin-top: 60px;}
 }
 @media screen and (min-width: 2000px) and (orientation: landscape){
-#everything { position: absolute; zoom: 100%;}
+#everything { position: absolute; zoom: 170%;}
 #stuff { overflow: auto; overflow: scroll; }
 }
 @media screen and (min-width: 3000px) and (orientation: landscape){
