--- a/links.html
+++ b/links.html
@@ -3,7 +3,7 @@
 
 <!--
 　　　          ___   .--.
-　　　    .--.-"   "-' .- |
+　　　    .--.-"   "-' .- |s
 　　　   / .-,`          .'   
 　　　   \   `           \ 　　　　　　。・゜ 　♡   。　　・　゜ 　　　♡  
 　　　    '.            ・ \　　　　　　　　　　　　　　　　　　　　　　　　♡　　　　♡ ゜・。。♡  
@@ -434,7 +434,7 @@ z-index: 3;
  }
 
 @supports not (-webkit-touch-callout: none) {
-@media screen and (max-width: 1000px) and (orientation: portrait){
+@media screen and (min-width: 1px) and (orientation: portrait){
 #everything { position: absolute; zoom: 155%;
 	left:570px;
 	top:80px;
@@ -446,7 +446,7 @@ z-index: 3;
 #stuff { overflow: auto; overflow: scroll; }
 }}
 @supports (-webkit-touch-callout: none) {
-@media screen and (max-width: 1000px) and (orientation: portrait){
+@media screen and (min-width: 1px) and (orientation: portrait){
 #everything { position: absolute; zoom: 155%;
 	left:570px;
 	top:80px;
@@ -468,7 +468,7 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 #stuff { overflow:hidden; }
 }
 @media screen and (min-width: 2000px) and (orientation: landscape){
-#everything { position: absolute; zoom: 100%;}
+#everything { position: absolute; zoom: 170%;}
 #stuff { overflow:hidden; }
 }
 @media screen and (min-width: 3000px) and (orientation: landscape){
