--- a/gaming.html
+++ b/gaming.html
@@ -795,12 +795,12 @@ cutest baby there is.<br>
 　　　community : brazilian<br><br><br>
 
 <div style="position:relative; left:7%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border-style: solid; border-width: 20px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 330px; height: 240px; line-height:10px; padding:5px;">
-<img id="fluffy" style="width:105px; height:auto; position:absolute; left:7px; top:35px;" src="https://i.imgur.com/1wEj8uk.png">
+<img id="fluffy" style="width:105px; height:auto; position:absolute; left:7px; top:35px;" src="https://i.imgur.com/XsIFHSg.png">
 
         <script type = "text/javascript">
             var image3 = document.getElementById("fluffy");
             var currentPos = 0;
-            var images3 = ["https://i.imgur.com/1wEj8uk.png", "https://i.imgur.com/a067qLt.png", "https://i.imgur.com/F131O4o.png", "https://i.imgur.com/QCeiE6b.png", "https://i.imgur.com/10iSJZk.png", "https://i.imgur.com/hiCRFud.png"]
+            var images3 = ["https://i.imgur.com/XsIFHSg.png", "https://i.imgur.com/U7gFqFt.png", "https://i.imgur.com/xcNqzHO.png", "https://i.imgur.com/X038GU1.png", "https://i.imgur.com/gC1ojV9.png", "https://i.imgur.com/mgd5fIw.png"]
 
             function volgendefoto3() {
                 if (++currentPos >= images3.length)
@@ -813,20 +813,20 @@ cutest baby there is.<br>
         </script>
 
 <font color="#a37c81" style="position:absolute; left:115px; top:3px; font-size:8px;">
-<sub><img width="auto" height="20px" src="https://i.imgur.com/Se1Diyp.png"></sub> ‌<b>fluff</b>#3583<font style="line-height:23px;"><br></font>
+<sub><img width="auto" height="20px" src="https://i.imgur.com/OhsAf5Y.png"></sub> ‌<b>fluff</b>#3583<font style="line-height:23px;"><br></font>
 　<font color="#b89196">level :</font> 60<br>
 　<font color="#b89196">fav mode :</font> normal<br>
 　<font color="#b89196">fav title :</font> snow angel<br>
 　<font color="#b89196" style="line-height:5px;">fav orb : <sub><sub><sub><img width="auto" height="40px" src="https://i.imgur.com/9sEBAGc.png"></sub></sub></sub><br>
 <br></font>
- ‌ <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/6QZYFsf.png"></sub></sub> ‌ <b>skill tree :</b><font style="line-height:20px;"><br></font>
+ ‌ <sub><sub><img width="auto" height="15px" src="https://i.imgur.com/HkTvuDq.png"></sub></sub> ‌ <b>skill tree :</b><font style="line-height:20px;"><br></font>
 　<font color="#b89196">spiritual guide [30]</font><br>
 　<font color="#b89196">wind master [26]</font><br>
 　<font color="#b89196" style="line-height:5px;">physicist [03]<br><br></font>
 　<font color="#b89196">items :</font> ‌ <sub><img width="auto" height="80px" src="https://i.imgur.com/q8leahH.png"></sub><br></font>
 
 <font color="#a37c81" style="position:absolute; left:215px; top:7px; font-size:8px;">
-　<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/i5J84sF.png"></sub></sub> <b>progress titles :</b><br>
+　<sub><sub><img width="20px" height="auto" src="https://i.imgur.com/Se1Diyp.png"></sub></sub> <b>progress titles :</b><br>
 <div style="overflow:hidden; border: 5px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 95px; height: 100px; overflow-x:hidden; padding:3px; margin-top:5px;">
 <div style="border: none; width: 90px; height: 100px; overflow-x:hidden; overflow: auto; overflow: scroll; line-height:10px; padding-right:5px; padding-left:1px;">
 ‌<font color="#b0878d" style="font-size:7px;">
