--- a/links.html
+++ b/links.html
@@ -457,7 +457,7 @@ z-index: 3;
     transform: rotate(90deg); }
 #stuff { overflow: auto; overflow: scroll; }
 html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
-#linkitems1{line-height: 15px !important;}
+#linkitems1{line-height: 17px !important;}
 #linkitems2{line-height: 15px !important;}
 }}
 
@@ -522,11 +522,11 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 #ooo { color: #c4a9ab; }
 </style>
 
-<div style="position:relative;  top:-8; width: 135px; height: 230px; overflow:hidden; float:left; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; line-height:14px; padding:5px; padding-top:5px;">
+<div style="position:relative;  top:-8; width: 135px; height: 220px; overflow:hidden; float:left; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; line-height:14px; padding:5px; padding-top:5px;">
 <div style="margin-top:-5px;"><font color="#b09698">
-<sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/ecPVEov.png"></sub></sub></sub> ‌ my websites :</font><div style="line-height:2px;"><br>
+<sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/ecPVEov.png"></sub></sub></sub> ‌ my domains :</font><div style="line-height:2px;"><br>
 <br></div>
-<div id="linkitems1" style="border: none; width: 130px; height: 209px; margin-top:3px; overflow: auto; overflow: scroll; line-height:18px; padding-right:2px; padding-left:5px;">
+<div id="linkitems1" style="border: none; width: 130px; height: 209px; margin-top:3px; overflow: auto; overflow: scroll; line-height:20px; padding-right:2px; padding-left:5px;">
 <font color="#7a6b6b">://</font> <a id="ooo" href="http://ഒ.㏄" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >ഒ.㏄</a><br>
  ‌  ‌‌ ‌ <font color="#7a6b6b">⤷</font> <a id="ooo" href="https://middlepot.com" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >middlepot.com</a><br>
 <font color="#7a6b6b">://</font> <a id="ooo" href="https://pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >pooftie.me</a><br>
@@ -535,14 +535,13 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <font color="#7a6b6b">://</font> <a id="ooo" href="https://myfluffy.life" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >myfluffy.life</a><br>
 <font color="#c7adad">:// puf.cafe</font><br>
 <font color="#c7adad">:// puf.to</font><br>
- ‌  ‌‌  ‌<font color="#c7adad">⤷ puf.bot</font><br>
 <font color="#c7adad">:// fluffy.land</font><br>
 </div></div>
 <br>
 </div>
 
-<div style="position:relative; top:-8; float:right; overflow:hidden; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 135px; height: 230px; overflow-x:hidden; line-height:20px; padding:5px; padding-top:5px;">
-<div style="margin-top:-2px;"><sub><sub><img width="auto" height="18px" src="https://i.imgur.com/vwcukYQ.png"></sub></sub><font color="#b09698"> ‌ my side web pages :<div style="line-height:2px;"><br>
+<div style="position:relative; top:-8; float:right; overflow:hidden; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 135px; height: 220px; overflow-x:hidden; line-height:20px; padding:5px; padding-top:5px;">
+<div style="margin-top:-2px;"><sub><sub><img width="auto" height="18px" src="https://i.imgur.com/vwcukYQ.png"></sub></sub><font color="#b09698"> ‌ my subdomains :<div style="line-height:2px;"><br>
 <br></div>
 <div id="linkitems2" style="border: none; width: 130px; height: 209px; margin-top:3px; overflow: auto; overflow: scroll; line-height:18px; padding-right:2px; padding-left:5px;">
 <font color="#7a6b6b">care.</font> <a id="ooo" href="https://care.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >my safe room</a>
@@ -590,7 +589,7 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <font color="#7a6b6b">teddy.</font> <a id="ooo" href="https://teddy.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >virtual collection</a>
 <br>
 <font color="#7a6b6b">soft.</font> <a id="ooo" href="https://soft.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >???</a>
-<br>
+<br><br>
 </div></div>
 </div>
 
@@ -598,7 +597,7 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 
 <br><br><br><br>
 </div>
-<div style="position:absolute; left:20%; right:20%; top:80%; line-height:14px;">
+<div style="position:absolute; left:20%; right:20%; top:78%; line-height:14px;">
 
 <center><div style="position:relative; top:-35; overflow:hidden; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 210px; height: 20px; overflow-x:hidden; line-height:14px; padding:5px;">
 <center><sub><sub><img width="auto" height="20px" src="https://i.imgur.com/0ncrfbs.png"></sub></sub><font color="#b09698" style="font-size:10px;"> ‌ my email : </font><a id="ooo" href="mailto:letters@middlepot.com" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;">letters@middlepot.com</a></center></div></center>
