--- a/contact.html
+++ b/contact.html
@@ -541,7 +541,7 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 		email.remove();
 		message.remove();
 		document.getElementById('send').remove();
-		document.getElementById('form-image').src = 'https://i.imgur.com/TvOJnFP.png';
+		document.getElementById('form-image').src = 'https://i.imgur.com/AgUMH0R.png';
 	}
 </script>
 
@@ -570,7 +570,7 @@ border: 0px; cursor: url(https://i.imgur.com/4oHqWDj.png), progress; color: #9e8
 font-family: verdana; font-size: 10px; letter-spacing:1px; line-height:15px;"></textarea>
 
 <div style=" z-index: 9; position:absolute; top:40px; left:40px; line-height: 12px; ">
-<img id="form-image" src="https://i.imgur.com/OFETRDd.png">
+<img id="form-image" src="https://i.imgur.com/zY1X1sQ.png">
 </div>
 
 <div id="send" style=" z-index: 12; position:absolute; top:335px; left:310px; line-height: 12px; ">
