--- a/credits.html
+++ b/credits.html
@@ -560,7 +560,7 @@ i don't see issue in freely using images of such edited as part of something els
 
 in the case you see me using content that could be possibly copyrighted without credits, there is also another thing to keep in mind :<br>
 it is inevitably difficult to give credits appropriately and correctly when searching for content on repost platforms sites like pinterest, tumblr, google images, we heart it, or even some old web archived sites. to avoid crediting to the wrong person, i simply don't do so until i am completely sure of who owns the content.<br>
-unfortunately, fake sources are very common, and i don't want to spread misinformation and lies, as this can cause even worse problems than just the absence of a source. nonetheless, i try to make sure i am making fair use of the content according to the intentions of each project i work on.<br><br>
+unfortunately, fake sources are very common, and i don't want to spread misinformation and lies, as this causes even worse problems than just the absence of a source. nonetheless, i try to make sure i am making fair use of the content according to the intentions of each project i work on.<br><br>
 
 again : a lot of the content i produce is made from scratch by me, but a lot of it is only edited or partially made by me. i try to be as clear as possible about it, but if you have any questions or think i'm not being clear enough, i will try to explain how was the process of finding the content, editing and so on.<br>
 it is difficult to be completely transparent about how much content is edited or not, especially without having the base content as a reference. content is often edited beforehand when reposted. nonetheless, i try my best not to cause problems for other artists.<br>
