--- a/blog.html
+++ b/blog.html
@@ -577,7 +577,7 @@ i would read blogs, play games .. it was healthy and so much fun !
 i thought i would be happier if i could have more internet, but oh i was wrong .. i sure am the happiest now, with this minimal time once again <sub><sub>💻</sub></sub>
 ( obviously i'm not counting the time i take to watch / read / listen to things, after all these are activities i can do with no internet connection, but of course i try doing everything in balance )
 
-i am also not being very social online either, and it's been really nice .. my "social battery" is small, so i respect my limits and choose to prioritize it for real life interactions, and letter exchanging, which i find more meaningful & rewarding <sub><sub>✏️</sub></sub>
+i am also not being very social online either, and it's been really nice .. my "social battery" is small, so i respect my limits and choose to prioritize it for real life interactions and letter exchanging, which i find more meaningful & rewarding <sub><sub>✏️</sub></sub>
 socializing easily becomes tiring and overstimulating - i must stay careful not to feel stressed and end up completely isolating myself.
 
 
@@ -618,7 +618,7 @@ and this is how i will finish my post this time around !
 
 it's more like writing a diary entry now .. and i am very happy with it.
 since i will be writing in this blog sporadically, for sharing thoughts and telling you important things, i don't see the point in showing project updates here, as they have already accumulated a lot during the previous months <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
-well, you can always check them in a more timely fashion at the index and at the poofties updates page !
+well, you can always check them in a more timely fashion at the <a id="linkbjinho" href="https://middlepot.com" target="_blank">index</a> and at the <a id="linkbjinho" href="https://poofties.club/updates" target="_blank">poofties updates page</a> !
 i think that's for the best, so my blog entries can be a little lighter, easier to write & read.
 
 
