--- a/blog.html
+++ b/blog.html
@@ -581,8 +581,7 @@ i am also not being very social online either, and it's been really nice .. my "
 socializing easily becomes tiring and overstimulating - i must stay careful not to feel stressed and end up completely isolating myself.
 
 
-
-i discovered that most things in my routine can be good "mindfulness" activities, but only if i do them with intention !! and stop multitasking !!!
+something else i have noticed is that most things in my routine can be good "mindfulness" activities, but only if i do them with intention !! and stop multitasking !!!
 i noticed that i often would schedule activities, as if i should do them, rather than i could do ..
 forcing myself, with deadlines even - what is the point ? how am i supposed to enjoy doing anything, if i feel obligated to do it ?
 
