--- a/about.html
+++ b/about.html
@@ -652,7 +652,7 @@ p { margin: 0; }
 <font color="#ceaaa9">my goal is to live a beautiful life + spread happiness & comfort ♡</font><br>
 <font color="#a08e8d">
 i'm an artist, crafter & designer who finds joy in spending time creating cute multimedia content, and making dreams come true !<br>
-i have lots of interests, i don't do things perfectly but i try my best to help and inspire others through my works.. i aim to be the guardian angel that quietly guides good-hearted people to purity and innocence.<br></font>
+i have lots of interests, i don't do things perfectly but i try my best to help and inspire others through my works.. i aim to be the guardian angel who quietly guides good-hearted people to purity and innocence.<br></font>
 <br><br><br>
 <font color="#827272">if you want more info about me and my stuff, please check out the </font><a style="color:#baa8a7; text-decoration: none; border-bottom:1px solid #baa8a7; padding-bottom: 0px;" href="https://middlepot.com/faq">faq</a>
 <br><br><br><br>
