--- a/gaming.html
+++ b/gaming.html
@@ -679,7 +679,7 @@ yummy sweets & desserts ♡<br>
 <br><br>
 
 <sub><sub><sub><img src="https://i.imgur.com/Y8IvPGs.png"></sub></sub></sub>
-<font color="#a8958d">　private server : novaro<br><br>
+<font color="#a8958d">　private server : novaro <b>( rip )</b><br><br>
 
 <div style="position:relative; left:7%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border-style: solid; border-width: 20px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 360px; height: 140px; line-height:10px; padding:5px;">
 <img style="position:absolute; left:16px; top:30px;" src="https://i.imgur.com/8b5g2Km.gif"><img style="position:absolute; left:75px; top:90px;" width="20px" height="auto" src="https://i.imgur.com/ZdfuOfA.png">
